compiler/test/conformance/invalid/inv_dangling_operator.tu
// INVÁLIDO: operador binário sem operando à direita
fn main() {
  let x = 1 +
  print(x)
}
